     Indonesian, Irish, Italian, Japanese, Korean, Latin, Lithuanian,
     Old English, Portuguese (Brazil), Russian, Slovak, Swedish
 * Lua API:
   * add function wesnoth.get_starting_location
   * The side metatable provides also the side number
     (like wesnoth.sides[i].side, which would be i)
   * add function wesnoth.debug
   * Added: Support for clickables (button and repeating button) to
     wesnoth.set_dialog_callback (patch #2763)
   * Allowed function debug.traceback()
   * wesnoth.set_village_owner takes a bool argument determining
     whether to fire capture events
 * Terrain:
   * Oasis may be placed on any terrain, aliased to base
   * New terrain macro: MOUNTAIN_SINGLE_RANDOM
   * New rotting variant for wooden bridge
 * Unit changes and Balancing
   * All mounted units now have forest defines capped at 30%. This reduces their
     defense on forested hills from 40% to 30%
   * Forests now give best defense and worst movement on all terrain,
     not just hills - fixes bug #18216
   * Fixed some Khalifate unit animation glitches
   * The XP required for an AMLA is now 50*level (and 25 for level 0) instead of
     always 150.
   * Increased the HP of the Great Mage from 55 to 60.
 * User interface
   * Removed waypoints UI feature
   * Added an option to disable the "loading save from a different version"
     confirmation dialog
   * Line-wrap author names in the add-on description dialog (bug #18691)
   * Made the Delete Add-on (in the server) option request confirmation from
     the user before proceeding
   * The add-ons download list shows up again after publishing/deleting a
     single add-on
   * Added option in advanced preferences that allows the twelve-hour clock
      format to be used
   * Reenabled "delay shroud updates"
   * Changed: Disable pango markup in unit names (bug #17788)
   * It is now possible to remove multiple installed add-ons at the same
     time
   * Slowed units are now tinted to be recognizable at a glance