@@ -3009,6 +3009,10 @@ std::string unit::image_mods() const{
 	return modifier.str();
 }
 
+std::string unit::effect_image_mods() const{
+	return image_mods_;
+}
+
 const tportrait* unit::portrait(
 		const unsigned size, const tportrait::tside side) const
 {
